--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -7,57 +7,237 @@
   <meta name="description" content="">
 
   <link rel="icon" href="public/img/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
   <link rel="stylesheet" href="public/css/app.min.css">
 
   <script>
     window.CONFIG = {
-      BASE_URL: '/'
-    }
+      BASE_URL : '/'
+    };
   </script>
 
 
-  <title>Pythone conference</title>
+  <title>Node Conference</title>
 </head>
 <body>
-  <div class="remodal-bg">
-    <header id="header" class="header">
-      <div class="header-white">
-        <div class="logo" style="width: 150px;">
-          <a href="#about" data-slickgoto="0">
-            <img src="public/img/logo.png" alt="" style="width: 100%; max-width: 70px; display: inline-block;">
-          </a>
-        </div>
-        <nav class="nav">
-          <ul class="menu">
-            <li><a href="#" data-slickgoto="0">anchor **</a></li>
-            <li><a href="#" data-slickgoto="1">anchor **</a></li>
-            <li><a href="#" data-slickgoto="2">anchor **</a></li>
-            <li><a href="#" data-slickgoto="3">anchor **</a></li>
-            <li><a href="#" data-slickgoto="4">anchor **</a></li>
-          </ul>
-        </nav>
+<div class="remodal-bg">
+  <header id="header" class="header">
+    <div class="header-cont container">
+      <div class="logo">
+        <a href="#heading">
+          <img src="public/img/logo_white.svg" alt="Node Conference">
+        </a>
+      </div>
+      <nav class="nav">
+        <ul class="menu">
+          <li><a href="#about">About</a></li>
+          <li><a href="#speakers">Speakers</a></li>
+          <li><a href="#workshops">Workshops</a></li>
+          <li><a href="#schedule">Schedule</a></li>
+          <li><a href="#sponsors">Sponsors</a></li>
+          <li><a href="#" target="_blank" class="link">Tickets</a></li>
+        </ul>
+      </nav>
 
-        <div class="flex a-i-center">
-          <div class="brgr-menu"></div>
+      <div class="brgr-menu"></div>
+
+    </div>
+
+  </header>
+  <div class="wrapper">
+    <section id="heading" class="heading">
+      <div class="container">
+        <div class="heading-title-row flex j-c-space-between a-i-center m-t-40">
+          <div class="heading-logo">
+            <!--<img src="public/img/logo_green.svg" alt="Node Conference">-->
+          </div>
+          <div class="heading-date">
+            September 30, 2018
+          </div>
+        </div>
+        <div class="flex j-c-flex-end">
+          <ul class="heading-list">
+            <li class="calendar">2я конференция по Python в Одессе</li>
+            <li class="clock">10+ часов нетворкинга</li>
+            <li class="format">Pre-party</li>
+            <li class="sheet">
+              3 формата <br>
+              <br>
+              - Talks <br>
+              - Tech Corner <br>
+              - Speakers Coach <br>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="about flex f-d-column j-c-space-between">
+      <div class="container">
+        <div class="flex j-c-space-between about-content">
+          <div class="about-tickets-txt ">
+            <div class="h2">About</div>
+
+            <div class="h4">
+              <!--Первая украинская конференция посвященная Node.js.<br>-->
+              <!--Наша цель - организовать интересную встречу для развития и общения самых активных Node.js-->
+              <!--профессионалов Украины и других стран.<br>-->
+              <!--Проведите Бабье лето на Node.js. Conference! <br>-->
+              <!--Вас ждут - уникальные темы, профессиональные и харизматичные спикеры, множество тем для дискуссий.-->
+            </div>
+          </div>
+
+          <div class="about-tickets-cont flex-item-1">
+
+            <div class="h3">
+              Tickets
+            </div>
+
+            <ul class="about-tickets-list">
+              <li class="about-ticket-item">
+
+                <a href="#">
+                  <div class="about-ticket-title">
+                    Early
+                  </div>
+                </a>
+                <div class="about-ticket-desc">
+                  950 UAH
+                </div>
+              </li>
+              <li class="about-ticket-item">
+
+                <a href="#">
+                  <div class="about-ticket-title">
+                    Regular
+                  </div>
+                </a>
+                <div class="about-ticket-desc">
+                  1450 UAH
+                </div>
+              </li>
+              <li class="about-ticket-item">
+
+                <a href="#">
+                  <div class="about-ticket-title">
+                    Late
+                  </div>
+                </a>
+                <div class="about-ticket-desc">
+                  1800 UAH
+                </div>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+      <div class="user-select-none">
+        <img class="about-bg-img" src="public/img/about_bg.svg" alt="gates">
+      </div>
+    </section>
+
+    <section id="speakers" class="speakers flex f-d-column j-c-space-between">
+      <div class="container">
+        <div class="h2">Speakers</div>
+        <div class="flex j-c-space-around speakers-list" id="speakers-list">
+
+          <!--<div class="speaker-item" data-remodal-target="speakers-modal"><div class="speaker-img"><img src="public/img/speakers/max_klymyshyn.jpg" alt="Max Klymyshyn"></div><div class="speaker-name">Max Klymyshyn</div><div class="speaker-position">Tech Lead</div><div class="speaker-report"> Workshop: Build blockchain using CRDT and Merkle Trees [Ru] <br> <br></div></div>-->
+          <!--<div class="speaker-item" data-remodal-target="speakers-modal"><div class="speaker-img"><img src="public/img/speakers/roman_sachenko.jpg" alt="Roman Sachenko"></div><div class="speaker-name">Roman Sachenko</div><div class="speaker-position">Software Engineer</div><div class="speaker-report"> NodeJS Microservices + CQRS + Event Sourcing - Why do I do this? [Ru] <br> <br></div></div>-->
         </div>
 
       </div>
+      <div class="flex j-c-flex-end user-select-none">
+        <img class="speakers-bg-img" src="public/img/speakers_bg.svg" alt="opera">
+      </div>
+    </section>
 
-    </header>
-    <div class="wrapper">
-      <section>
-        <h1 class="text-center">Python conference</h1>
+    <!--<section id="workshops">-->
+      <!--<div class="container">-->
+        <!--<div class="h2">Workshops</div>-->
+      <!--</div>-->
+    <!--</section>-->
 
-        <div class="text-center p-t-50 m-t-50">
-          <img src="public/img/logo.png" alt="" style="width: 100%; max-width: 200px; display: inline-block;">
+    <section id="schedule">
+      <div class="container">
+        <div class="h2">Schedule</div>
+
+        <div class="m-t-50 p-t-50 h3 text-center text-grey">
+          Программа конференции будет доступна за 2 недели до мероприятия
         </div>
-      </section>
+
+        <!--<div class="schedule-list">-->
+          <!--<div class="schedule-item">-->
+            <!--<div class="schedule-time">9.00-10.00</div>-->
+            <!--<div class="schedule-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      </div>
+      <div class="flex user-select-none">
+        <img class="schedule-bg-img" src="public/img/schedule_bg.svg" alt="colonnade">
+      </div>
+    </section>
+
+    <section id="sponsors" class="sponsors">
+      <div class="container">
+        <div class="h2">Sponsors</div>
+
+        <div class="m-t-80 h4 text-center sponsors-text">
+          <p>Мы рады обсудить с Вами дополнительные условия партнерства, которые будут наиболее
+          интересны для Вас, в индивидуальном порядке.</p>
+          <br>
+          <p>Хотите стать спонсором?</p>
+          <p>позвоните нам <a class="text-bold link"  href="tel:380982845165">+38 (098) 284 51 65</a> / Мария</p>
+          <p>напишите нам <a class="text-bold link"  href="mailto:nodejs.uaconf@gmail.com">nodejs.uaconf@gmail.com</a></p>
+          <p>или постучитесь в Telegram - <a  class="text-bold link" href="tg://resolve?domain=380503731465">+38 (050) 373 14 65</a> / Юлия</p>
+
+          <div class="text-center m-t-50">
+            <a href="#" target="_blank" class="btn">
+              Скачать партнерскую программу
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="user-select-none">
+        <img class="sponsors-bg-img" src="public/img/sponsors_bg.svg" alt="colonnade">
+      </div>
+    </section>
+  </div>
+</div>
+
+<!-- Modals -->
+<div class="remodal speakers-modal" data-remodal-id="speakers-modal" id="speakers-modal">
+  <button data-remodal-action="close" class="remodal-close"></button>
+  <div class="flex speakers-modal_heading">
+    <div class="speakers-modal_img">
+      <img src="public/img/speakers/andrey_grachev.png" alt="">
     </div>
+    <div class="speakers-modal_txt ">
+      <div class="speaker-name">
+      </div>
+      <div class="speaker-position">
+        <span class="position"></span>
+        @<span class="company"></span>
+      </div>
+    </div>
+
   </div>
 
+  <div class="speakers-modal_content m-t-40 m-b-50">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda beatae culpa dolores eum
+      excepturi expedita facere, fugiat iusto, maxime modi nemo officia optio perferendis porro quis sit sunt
+      voluptas.
+    </p>
+  </div>
+
+  <!--<button data-remodal-action="cancel" class="remodal-cancel">Cancel</button>-->
+  <div class="flex j-c-space-between">
+    <button class="remodal-prev">Previous</button>
+    <button class="remodal-next">Next</button>
+  </div>
+</div>
 </body>
 <script src="public/js/index.js"></script>
 </html>
