--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -183,21 +183,21 @@
       <div class="container">
         <div class="h2">Sponsors</div>
 
-        <div class="m-t-80 h4 text-center sponsors-text">
-          <p>Мы рады обсудить с Вами дополнительные условия партнерства, которые будут наиболее
-          интересны для Вас, в индивидуальном порядке.</p>
-          <br>
-          <p>Хотите стать спонсором?</p>
-          <p>позвоните нам <a class="text-bold link"  href="tel:380982845165">+38 (098) 284 51 65</a> / Мария</p>
-          <p>напишите нам <a class="text-bold link"  href="mailto:nodejs.uaconf@gmail.com">nodejs.uaconf@gmail.com</a></p>
-          <p>или постучитесь в Telegram - <a  class="text-bold link" href="tg://resolve?domain=380503731465">+38 (050) 373 14 65</a> / Юлия</p>
+        <!--<div class="m-t-80 h4 text-center sponsors-text">-->
+          <!--<p>Мы рады обсудить с Вами дополнительные условия партнерства, которые будут наиболее-->
+          <!--интересны для Вас, в индивидуальном порядке.</p>-->
+          <!--<br>-->
+          <!--<p>Хотите стать спонсором?</p>-->
+          <!--<p>позвоните нам <a class="text-bold link"  href="tel:380982845165">+38 (098) 284 51 65</a> / Мария</p>-->
+          <!--<p>напишите нам <a class="text-bold link"  href="mailto:nodejs.uaconf@gmail.com">nodejs.uaconf@gmail.com</a></p>-->
+          <!--<p>или постучитесь в Telegram - <a  class="text-bold link" href="tg://resolve?domain=380503731465">+38 (050) 373 14 65</a> / Юлия</p>-->
 
-          <div class="text-center m-t-50">
-            <a href="#" target="_blank" class="btn">
-              Скачать партнерскую программу
-            </a>
-          </div>
-        </div>
+          <!--<div class="text-center m-t-50">-->
+            <!--<a href="#" target="_blank" class="btn">-->
+              <!--Скачать партнерскую программу-->
+            <!--</a>-->
+          <!--</div>-->
+        <!--</div>-->
       </div>
       <div class="user-select-none">
         <img class="sponsors-bg-img" src="public/img/sponsors_bg.svg" alt="colonnade">
