--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -26,7 +26,7 @@
     <div class="header-cont container">
       <div class="logo">
         <a href="#heading">
-          <img src="public/img/logo_white.svg" alt="Node Conference">
+          <!--<img src="public/img/logo_white.svg" alt="Node Conference">-->
         </a>
       </div>
       <nav class="nav">
