--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -46,17 +46,19 @@
 
   </header>
   <div class="wrapper">
-    <section id="heading" class="heading">
+    <section id="heading" class="heading p-b-80">
       <div class="container">
-        <div class="heading-title-row flex j-c-space-between a-i-center m-t-40">
+        <div class="heading-title-row flex a-i-center m-t-40">
           <div class="heading-logo">
-            <!--<img src="public/img/logo_green.svg" alt="Node Conference">-->
+            <img src="public/img/logo_heading.jpg" alt="Node Conference">
           </div>
+        </div>
+        <div class="flex f-d-column a-i-flex-end j-c-flex-end">
+
           <div class="heading-date">
             September 30, 2018
           </div>
-        </div>
-        <div class="flex j-c-flex-end">
+
           <ul class="heading-list">
             <li class="calendar">2я конференция по Python в Одессе</li>
             <li class="clock">10+ часов нетворкинга</li>
@@ -73,19 +75,11 @@
       </div>
     </section>
 
-    <section id="about" class="about flex f-d-column j-c-space-between">
+    <section id="about" class="about flex f-d-column j-c-space-between p-b-80">
       <div class="container">
         <div class="flex j-c-space-between about-content">
           <div class="about-tickets-txt ">
             <div class="h2">About</div>
-
-            <div class="h4">
-              <!--Первая украинская конференция посвященная Node.js.<br>-->
-              <!--Наша цель - организовать интересную встречу для развития и общения самых активных Node.js-->
-              <!--профессионалов Украины и других стран.<br>-->
-              <!--Проведите Бабье лето на Node.js. Conference! <br>-->
-              <!--Вас ждут - уникальные темы, профессиональные и харизматичные спикеры, множество тем для дискуссий.-->
-            </div>
           </div>
 
           <div class="about-tickets-cont flex-item-1">
@@ -134,7 +128,27 @@
         </div>
       </div>
       <div class="user-select-none">
-        <img class="about-bg-img" src="public/img/about_bg.svg" alt="gates">
+        <img class="about-bg-img" src="public/img/about_bg.png" alt="gates">
+      </div>
+    </section>
+
+
+
+    <section class="speakers flex f-d-column j-c-space-between">
+      <div class="container">
+
+        <div class="flex">
+          <div class="h4 flex-item-4 m-r-50" style="color: #333333; font-size: 25px; letter-spacing: 4.75px;">
+          7 декабря 2013 года в одесском офисе Lohika состоялась встреча «OdessaPy».
+          Мероприятие прошло в рамках конференций CityPy и собрало гостей из разных уголков Украины, а также из
+          России и Молдавии — всего более 75 человек.
+          Программа была довольно насыщенной и освещала различные аспекты программирования на Python.
+          </div>
+
+          <div class="flex-item-1">
+            <img class="" src="public/img/sun_bg.png" alt="sun" style="max-width: 240px">
+          </div>
+        </div>
       </div>
     </section>
 
@@ -148,15 +162,15 @@
         </div>
 
       </div>
-      <div class="flex j-c-flex-end user-select-none">
-        <img class="speakers-bg-img" src="public/img/speakers_bg.svg" alt="opera">
+      <div class="flex user-select-none">
+        <img class="speakers-bg-img" src="public/img/speakers_bg.png" alt="opera">
       </div>
     </section>
 
     <!--<section id="workshops">-->
-      <!--<div class="container">-->
-        <!--<div class="h2">Workshops</div>-->
-      <!--</div>-->
+    <!--<div class="container">-->
+    <!--<div class="h2">Workshops</div>-->
+    <!--</div>-->
     <!--</section>-->
 
     <section id="schedule">
@@ -168,10 +182,10 @@
         </div>
 
         <!--<div class="schedule-list">-->
-          <!--<div class="schedule-item">-->
-            <!--<div class="schedule-time">9.00-10.00</div>-->
-            <!--<div class="schedule-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>-->
-          <!--</div>-->
+        <!--<div class="schedule-item">-->
+        <!--<div class="schedule-time">9.00-10.00</div>-->
+        <!--<div class="schedule-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>-->
+        <!--</div>-->
         <!--</div>-->
       </div>
       <div class="flex user-select-none">
@@ -184,19 +198,19 @@
         <div class="h2">Sponsors</div>
 
         <!--<div class="m-t-80 h4 text-center sponsors-text">-->
-          <!--<p>Мы рады обсудить с Вами дополнительные условия партнерства, которые будут наиболее-->
-          <!--интересны для Вас, в индивидуальном порядке.</p>-->
-          <!--<br>-->
-          <!--<p>Хотите стать спонсором?</p>-->
-          <!--<p>позвоните нам <a class="text-bold link"  href="tel:380982845165">+38 (098) 284 51 65</a> / Мария</p>-->
-          <!--<p>напишите нам <a class="text-bold link"  href="mailto:nodejs.uaconf@gmail.com">nodejs.uaconf@gmail.com</a></p>-->
-          <!--<p>или постучитесь в Telegram - <a  class="text-bold link" href="tg://resolve?domain=380503731465">+38 (050) 373 14 65</a> / Юлия</p>-->
+        <!--<p>Мы рады обсудить с Вами дополнительные условия партнерства, которые будут наиболее-->
+        <!--интересны для Вас, в индивидуальном порядке.</p>-->
+        <!--<br>-->
+        <!--<p>Хотите стать спонсором?</p>-->
+        <!--<p>позвоните нам <a class="text-bold link"  href="tel:380982845165">+38 (098) 284 51 65</a> / Мария</p>-->
+        <!--<p>напишите нам <a class="text-bold link"  href="mailto:nodejs.uaconf@gmail.com">nodejs.uaconf@gmail.com</a></p>-->
+        <!--<p>или постучитесь в Telegram - <a  class="text-bold link" href="tg://resolve?domain=380503731465">+38 (050) 373 14 65</a> / Юлия</p>-->
 
-          <!--<div class="text-center m-t-50">-->
-            <!--<a href="#" target="_blank" class="btn">-->
-              <!--Скачать партнерскую программу-->
-            <!--</a>-->
-          <!--</div>-->
+        <!--<div class="text-center m-t-50">-->
+        <!--<a href="#" target="_blank" class="btn">-->
+        <!--Скачать партнерскую программу-->
+        <!--</a>-->
+        <!--</div>-->
         <!--</div>-->
       </div>
       <div class="user-select-none">
