--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -224,7 +224,7 @@
         <br>
         <p>Хотите стать спонсором?</p>
         <p>позвоните нам <a class="text-bold link"  href="tel:380982845165">+38 (098) 284 51 65</a> / Мария</p>
-        <p>напишите нам <a class="text-bold link"  href="mailto:pycon.odessa@gmail.com">nodejs.uaconf@gmail.com</a></p>
+        <p>напишите нам <a class="text-bold link"  href="mailto:pycon.odessa@gmail.com">pycon.odessa@gmail.com</a></p>
         <p>или постучитесь в Telegram - <a  class="text-bold link" href="tg://resolve?domain=380503731465">+38 (050) 373 14 65</a> / Юлия</p>
 
         <div class="text-center m-t-50">
