--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -26,7 +26,7 @@
     <div class="header-cont container">
       <div class="logo">
         <a href="#heading">
-          <img src="public/img/logo.png" alt="Node Conference">
+          <img data-src="public/img/logo.png" alt="Node Conference">
         </a>
       </div>
       <nav class="nav">
@@ -52,11 +52,11 @@
         <div class="heading-title-row flex j-c-space-between m-t-20 ">
 
           <div class="heading-logo m-t-30">
-            <img src="public/img/logo.png" alt="Node Conference">
+            <img data-src="public/img/logo.png" alt="Node Conference">
           </div>
 
           <div class="heading-sun m-l-30">
-            <img src="public/img/heading_sun.svg" alt="">
+            <img data-src="public/img/heading_sun.svg" alt="">
           </div>
 
 
@@ -83,8 +83,8 @@
         </div>
       </div>
       <div class="user-select-none">
-        <img class="heading-bg-img" src="public/img/heading_bg.png" alt="lighthouse">
-        <img class="heading-bg-img-m" src="public/img/heading_bg_m.png" alt="lighthouse">
+        <img class="heading-bg-img" data-src="public/img/heading_bg.png" alt="lighthouse">
+        <img class="heading-bg-img-m" data-src="public/img/heading_bg_m.png" alt="lighthouse">
       </div>
     </section>
 
@@ -141,7 +141,7 @@
         </div>
       </div>
       <div class="user-select-none">
-        <img class="about-bg-img" src="public/img/about_bg.png" alt="gates">
+        <img class="about-bg-img" data-src="public/img/about_bg.png" alt="gates">
       </div>
     </section>
 
@@ -157,18 +157,18 @@
           </div>
 
           <div class="flex-item-1">
-            <img class="" src="public/img/sun_bg.png" alt="sun" style="max-width: 240px">
+            <img class="" data-src="public/img/sun_bg.png" alt="sun" style="max-width: 240px">
           </div>
         </div>
 
         <div class="flex flex-wrap history-gallery">
           <div>
 
-            <img class="" src="public/img/history/history_1.jpg" alt="report">
+            <img class="" data-src="public/img/history/history_1.jpg" alt="report">
           </div>
           <div>
 
-            <img class="" src="public/img/history/history_2.jpg" alt="cake">
+            <img class="" data-src="public/img/history/history_2.jpg" alt="cake">
           </div>
 
         </div>
@@ -184,7 +184,7 @@
 
       </div>
       <div class="flex user-select-none">
-        <img class="speakers-bg-img" src="public/img/speakers_bg.png" alt="opera">
+        <img class="speakers-bg-img" data-src="public/img/speakers_bg.png" alt="opera">
       </div>
     </section>
 
@@ -210,7 +210,7 @@
         <!--</div>-->
       </div>
       <div class="user-select-none">
-        <img class="schedule-bg-img" src="public/img/schedule_bg.png" alt="anchor">
+        <img class="schedule-bg-img" data-src="public/img/schedule_bg.png" alt="anchor">
       </div>
     </section>
 
@@ -235,7 +235,7 @@
         </div>
       </div>
       <div class="user-select-none">
-        <img class="sponsors-bg-img" src="public/img/sponsors_bg.png" alt="seagull">
+        <img class="sponsors-bg-img" data-src="public/img/sponsors_bg.png" alt="seagull">
       </div>
     </section>
   </div>
@@ -246,7 +246,7 @@
   <button data-remodal-action="close" class="remodal-close"></button>
   <div class="flex speakers-modal_heading">
     <div class="speakers-modal_img">
-      <img src="public/img/speakers/andrey_grachev.png" alt="">
+      <img data-src="public/img/speakers/andrey_grachev.png" alt="">
     </div>
     <div class="speakers-modal_txt ">
       <div class="speaker-name">
