--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -234,7 +234,7 @@
         </div>
         </div>
       </div>
-      <div class="user-select-none">
+      <div class="user-select-none m-b-20">
         <img class="sponsors-bg-img" data-src="public/img/sponsors_bg.png" alt="seagull">
       </div>
     </section>
