--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -109,9 +109,9 @@
                     Early
                   </div>
                 </a>
-                <div class="about-ticket-desc">
-                  850 UAH
-                </div>
+                <!--<div class="about-ticket-desc">-->
+                  <!--850 UAH-->
+                <!--</div>-->
               </li>
               <li class="about-ticket-item">
 
@@ -120,9 +120,9 @@
                     Regular
                   </div>
                 </a>
-                <div class="about-ticket-desc">
-                  1350 UAH
-                </div>
+                <!--<div class="about-ticket-desc">-->
+                  <!--1350 UAH-->
+                <!--</div>-->
               </li>
               <li class="about-ticket-item">
 
@@ -131,9 +131,9 @@
                     Late
                   </div>
                 </a>
-                <div class="about-ticket-desc">
-                  1650 UAH
-                </div>
+                <!--<div class="about-ticket-desc">-->
+                  <!--1650 UAH-->
+                <!--</div>-->
               </li>
             </ul>
           </div>
