--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="${{ index.lang }}$">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -11,9 +11,11 @@
 
   <link rel="stylesheet" href="public/css/app.min.css">
 
+
   <script>
     window.CONFIG = {
-      BASE_URL : '/'
+      BASE_URL : '/',
+      LANG : '${{ index.lang }}$'
     };
   </script>
 
@@ -29,18 +31,43 @@
           <img data-src="public/img/logo.png" alt="Node Conference">
         </a>
       </div>
-      <nav class="nav">
-        <ul class="menu">
-          <li><a href="#about">About</a></li>
-          <li><a href="#speakers">Speakers</a></li>
-          <!--<li><a href="#workshops">Workshops</a></li>-->
-          <li><a href="#schedule">Schedule</a></li>
-          <li><a href="#sponsors">Sponsors</a></li>
-          <li><a href="#" target="_blank" class="link">Tickets</a></li>
-        </ul>
-      </nav>
+      <div class="flex a-i-center">
+        <nav class="nav">
+          <ul class="menu">
+            <li><a href="#about">
+              ${{ index.menu_about }}$
+            </a></li>
+            <li><a href="#speakers">
+              ${{ index.menu_speakers }}$
+            </a></li>
+            <!--<li><a href="#workshops">Workshops</a></li>-->
+            <li><a href="#schedule">
+              ${{ index.menu_schedule }}$
+            </a></li>
+            <li><a href="#sponsors">
+              ${{ index.menu_sponsors }}$
+            </a></li>
+            <li><a href="#" target="_blank" class="link">
+              ${{ index.menu_tickets }}$
+            </a></li>
+            <li class="lang-mobile">
+              <a href="${{ index.lang_link_ru }}$">ru</a>
+              |
+              <a href="${{ index.lang_link_en }}$">en</a>
+            </li>
+          </ul>
+        </nav>
 
-      <div class="brgr-menu"></div>
+
+        <ul class="lang">
+          <li>
+            <a href="${{ index.lang_link_ru }}$">ru</a>
+            |
+            <a href="${{ index.lang_link_en }}$">en</a>
+          </li>
+        </ul>
+        <div class="brgr-menu"></div>
+      </div>
 
     </div>
 
@@ -65,19 +92,19 @@
         <div class="flex f-d-column a-i-flex-end j-c-flex-end heading-list-container">
 
           <div class="heading-date">
-            September 30, 2018
+            ${{ index.heading_date }}$
           </div>
 
           <ul class="heading-list">
-            <li class="calendar">2я конференция по Python в Одессе</li>
-            <li class="clock">10+ часов нетворкинга</li>
-            <li class="format">Pre-party</li>
+            <li class="calendar">${{ index.heading_list_1 }}$</li>
+            <li class="clock">${{ index.heading_list_2 }}$</li>
+            <li class="format">${{ index.heading_list_4 }}$</li>
             <li class="sheet">
-              3 формата <br>
+              ${{ index.heading_list_3 }}$ <br>
               <br>
-              - Talks <br>
-              - Tech Corner <br>
-              - Speakers Coach <br>
+              - ${{ index.heading_list_3_1 }}$ <br>
+              - ${{ index.heading_list_3_2 }}$ <br>
+              - ${{ index.heading_list_3_3 }}$ <br>
             </li>
           </ul>
         </div>
@@ -92,13 +119,13 @@
       <div class="container">
         <div class="flex j-c-space-between about-content">
           <div class="about-tickets-txt ">
-            <div class="h2">About</div>
+            <div class="h2">${{ index.about_head }}$</div>
           </div>
 
           <div class="about-tickets-cont flex-item-1">
 
             <div class="h3">
-              Tickets
+              ${{ index.tickets_head }}$
             </div>
 
             <ul class="about-tickets-list">
@@ -110,7 +137,7 @@
                   </div>
                 </a>
                 <!--<div class="about-ticket-desc">-->
-                  <!--850 UAH-->
+                <!--850 UAH-->
                 <!--</div>-->
               </li>
               <li class="about-ticket-item">
@@ -121,7 +148,7 @@
                   </div>
                 </a>
                 <!--<div class="about-ticket-desc">-->
-                  <!--1350 UAH-->
+                <!--1350 UAH-->
                 <!--</div>-->
               </li>
               <li class="about-ticket-item">
@@ -132,7 +159,7 @@
                   </div>
                 </a>
                 <!--<div class="about-ticket-desc">-->
-                  <!--1650 UAH-->
+                <!--1650 UAH-->
                 <!--</div>-->
               </li>
             </ul>
@@ -151,9 +178,7 @@
 
         <div class="flex a-i-center j-c-space-between history-content">
           <div class="h4 flex-item-4 m-r-50 history-txt">
-            7 декабря 2013 года состоялась встреча «OdessaPy». Собрались гости из разных уголков Украины, а также из
-            России и Молдавии — более 75 человек. Программа была довольно насыщенной и освещала различные аспекты
-            программирования на Python.
+            ${{ index.history_txt }}$
           </div>
 
           <div class="flex-item-1">
@@ -163,25 +188,22 @@
 
         <div class="flex flex-wrap history-gallery">
           <div>
-
             <img class="" data-src="public/img/history/history_1.jpg" alt="report">
           </div>
-          <div>
 
+          <div>
             <img class="" data-src="public/img/history/history_2.jpg" alt="cake">
           </div>
-
         </div>
       </div>
     </section>
 
     <section id="speakers" class="speakers flex f-d-column j-c-space-between">
       <div class="container">
-        <div class="h2">Speakers</div>
+        <div class="h2">${{ index.speakers_head }}$</div>
+
         <div class="flex j-c-space-around speakers-list" id="speakers-list">
-
         </div>
-
       </div>
       <div class="flex user-select-none">
         <img class="speakers-bg-img" data-src="public/img/speakers_bg.png" alt="opera">
@@ -196,10 +218,10 @@
 
     <section id="schedule">
       <div class="container">
-        <div class="h2">Schedule</div>
+        <div class="h2">${{ index.schedule_head }}$</div>
 
         <div class="m-t-50 p-t-50 h3 text-center text-grey">
-          Программа конференции будет доступна за 2 недели до мероприятия
+          ${{ index.schedule_txt }}$
         </div>
 
         <!--<div class="schedule-list">-->
@@ -216,22 +238,147 @@
 
     <section id="sponsors" class="sponsors">
       <div class="container">
-        <div class="h2">Sponsors</div>
+        <div class="h2">
+          ${{ index.sponsors_head }}$
+        </div>
 
         <div class="m-t-80 h4 text-center sponsors-text">
-        <p>Мы рады обсудить с Вами дополнительные условия партнерства, которые будут наиболее
-        интересны для Вас, в индивидуальном порядке.</p>
-        <br>
-        <p>Хотите стать спонсором?</p>
-        <p>позвоните нам <a class="text-bold link white-space-nw "  href="tel:380982845165">+38 (098) 284 51 65</a> / Мария</p>
-        <p>напишите нам <a class="text-bold link white-space-nw "  href="mailto:pycon.odessa@gmail.com">pycon.odessa@gmail.com</a></p>
-        <p>или постучитесь в Telegram - <a  class="text-bold link white-space-nw " href="tg://resolve?domain=380503731465">+38 (050) 373 14 65</a> / Юлия</p>
-
-        <div class="text-center m-t-50">
-        <a href="#" target="_blank" class="btn">
-        Скачать партнерскую программу
-        </a>
+          <p>
+            ${{ index.sponsors_txt_1 }}$
+          </p>
+          <br>
         </div>
+
+        <div class="table-container m-t-10">
+          <table class="table">
+            <thead>
+            <tr>
+              <th></th>
+              <th>Bronze</th>
+              <th>Silver</th>
+              <th>Gold</th>
+              <th>General</th>
+            </tr>
+
+            <tr>
+              <td>Logo on event website</td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Logo on Conference pages in social networks</td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Logo in Newsletter</td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Logo on badges for participants</td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Logo on T-shirts for the speakers and lottery</td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Technical talk of the Sponsor’s employee at the Conference</td>
+              <td></td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Mobile banner at the Conference day</td>
+              <td></td>
+              <td>+</td>
+              <td>+</td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Sponsor's booth at the Conference day</td>
+              <td></td>
+              <td></td>
+              <td>+</td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Sponsor’s logo on video recordings of the Conference reports</td>
+              <td></td>
+              <td></td>
+              <td>+</td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Free participation of the Sponsor’s representatives to the Conference</td>
+              <td></td>
+              <td></td>
+              <td>+</td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Presence of a representative at the Speakers Dinner</td>
+              <td></td>
+              <td></td>
+              <td>+</td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Presentation by the Sponsor’s representative/recruiting session (7-10min)</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>+</td>
+            </tr>
+            <tr>
+              <td>Sponsor’s Questions included in the Conference feedback questionnaire</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>+</td>
+            </tr>
+            </thead>
+          </table>
+        </div>
+
+        <div class="m-t-50 h4 text-center sponsors-text">
+          <p>
+            ${{ index.sponsors_txt_2 }}$
+          </p>
+          <p>
+            ${{ index.sponsors_txt_3 }}$ -
+            <a class="text-bold link white-space-nw" href="tel:380982845165">+38 (098) 284 51 65</a> /
+            ${{ index.sponsors_mariia }}$
+          </p>
+          <p>
+            ${{ index.sponsors_txt_4 }}$ -
+            <a class="text-bold link white-space-nw" href="mailto:pycon.odessa@gmail.com">pycon.odessa@gmail.com</a>
+          </p>
+          <p>
+            ${{ index.sponsors_txt_5 }}$ -
+            <a class="text-bold link white-space-nw" href="tg://resolve?domain=380503731465">+38 (050) 373 14 65</a> /
+            ${{ index.sponsors_julia }}$
+          </p>
+
+          <!--<div class="text-center m-t-50">-->
+          <!--<a href="#" target="_blank" class="btn">-->
+          <!--${{ index.sponsors_program }}$-->
+          <!--</a>-->
+          <!--</div>-->
         </div>
       </div>
       <div class="user-select-none m-b-20">
@@ -256,21 +403,18 @@
         <span class="company"></span>
       </div>
     </div>
-
   </div>
 
-  <div class="speakers-modal_content m-t-40 m-b-50">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda beatae culpa dolores eum
-      excepturi expedita facere, fugiat iusto, maxime modi nemo officia optio perferendis porro quis sit sunt
-      voluptas.
-    </p>
-  </div>
+  <div class="speakers-modal_content m-t-40 m-b-50"></div>
 
   <!--<button data-remodal-action="cancel" class="remodal-cancel">Cancel</button>-->
   <div class="flex j-c-space-between">
-    <button class="remodal-prev">Previous</button>
-    <button class="remodal-next">Next</button>
+    <button class="remodal-prev">
+      ${{ index.poup_previous }}$
+    </button>
+    <button class="remodal-next">
+      ${{ index.poup_next }}$
+    </button>
   </div>
 </div>
 </body>
