--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -8,6 +8,8 @@
 
   <link rel="icon" href="public/img/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
   <link rel="stylesheet" href="public/css/app.min.css">
 
@@ -398,10 +400,13 @@
     <div class="speakers-modal_txt ">
       <div class="speaker-name">
       </div>
+
       <div class="speaker-position">
         <span class="position"></span>
         <span class="company"></span>
       </div>
+
+      <div class="speaker-socials"></div>
     </div>
   </div>
 
