--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -119,11 +119,12 @@
 
     <section id="about" class="about flex f-d-column j-c-space-between p-b-80">
       <div class="container">
-        <div class="flex j-c-space-between about-content">
-          <div class="about-tickets-txt ">
-            <div class="h2">${{ index.about_head }}$</div>
-          </div>
+        <div class="about-tickets-txt ">
+          <div class="h2">${{ index.about_head }}$</div>
+        </div>
 
+        <div class="flex j-c-space-between about-content">
+          <div></div>
           <div class="about-tickets-cont flex-item-1">
 
             <div class="h3">
