--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -264,91 +264,91 @@
             </tr>
 
             <tr>
-              <td>Logo on event website</td>
+              <td>${{ index.sponsors_option_1 }}$</td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Logo on Conference pages in social networks</td>
+              <td>${{ index.sponsors_option_2 }}$</td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Logo in Newsletter</td>
+              <td>${{ index.sponsors_option_3 }}$</td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Logo on badges for participants</td>
+              <td>${{ index.sponsors_option_4 }}$</td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Logo on T-shirts for the speakers and lottery</td>
+              <td>${{ index.sponsors_option_5 }}$</td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Technical talk of the Sponsor’s employee at the Conference</td>
+              <td>${{ index.sponsors_option_6 }}$</td>
               <td></td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Mobile banner at the Conference day</td>
+              <td>${{ index.sponsors_option_7 }}$</td>
               <td></td>
               <td>+</td>
               <td>+</td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Sponsor's booth at the Conference day</td>
+              <td>${{ index.sponsors_option_8 }}$</td>
               <td></td>
               <td></td>
               <td>+</td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Sponsor’s logo on video recordings of the Conference reports</td>
+              <td>${{ index.sponsors_option_9 }}$</td>
               <td></td>
               <td></td>
               <td>+</td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Free participation of the Sponsor’s representatives to the Conference</td>
+              <td>${{ index.sponsors_option_10 }}$</td>
               <td></td>
               <td></td>
               <td>+</td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Presence of a representative at the Speakers Dinner</td>
+              <td>${{ index.sponsors_option_11 }}$</td>
               <td></td>
               <td></td>
               <td>+</td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Presentation by the Sponsor’s representative/recruiting session (7-10min)</td>
+              <td>${{ index.sponsors_option_12 }}$</td>
               <td></td>
               <td></td>
               <td></td>
               <td>+</td>
             </tr>
             <tr>
-              <td>Sponsor’s Questions included in the Conference feedback questionnaire</td>
+              <td>${{ index.sponsors_option_13 }}$</td>
               <td></td>
               <td></td>
               <td></td>
