--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -139,9 +139,9 @@
                     Early
                   </div>
                 </a>
-                <!--<div class="about-ticket-desc">-->
-                <!--850 UAH-->
-                <!--</div>-->
+                <div class="about-ticket-desc">
+                  1350 UAH
+                </div>
               </li>
               <li class="about-ticket-item">
 
@@ -150,21 +150,21 @@
                     Regular
                   </div>
                 </a>
-                <!--<div class="about-ticket-desc">-->
-                <!--1350 UAH-->
-                <!--</div>-->
+                <div class="about-ticket-desc">
+                  1750 UAH
+                </div>
               </li>
-              <li class="about-ticket-item">
+              <!--<li class="about-ticket-item">-->
 
-                <a href="#">
-                  <div class="about-ticket-title">
-                    Late
-                  </div>
-                </a>
+                <!--<a href="#">-->
+                  <!--<div class="about-ticket-title">-->
+                    <!--Late-->
+                  <!--</div>-->
+                <!--</a>-->
                 <!--<div class="about-ticket-desc">-->
                 <!--1650 UAH-->
                 <!--</div>-->
-              </li>
+              <!--</li>-->
             </ul>
           </div>
 
