--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
+  <meta name="description" content="PyCon Odessa is the second Python-focused conference organized in Odessa">
 
   <link rel="icon" href="public/img/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -49,7 +49,7 @@
             <li><a href="#sponsors">
               ${{ index.menu_sponsors }}$
             </a></li>
-            <li><a href="#" target="_blank" class="link">
+            <li><a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" class="link">
               ${{ index.menu_tickets }}$
             </a></li>
             <li class="lang-mobile">
@@ -124,7 +124,13 @@
         </div>
 
         <div class="flex j-c-space-between about-content">
-          <div></div>
+
+          <div class="about-tickets-txt ">
+            <div class="h4">
+              ${{ index.about_txt_1 }}$
+            </div>
+          </div>
+
           <div class="about-tickets-cont flex-item-1">
 
             <div class="h3">
@@ -134,9 +140,10 @@
             <ul class="about-tickets-list">
               <li class="about-ticket-item">
 
-                <a href="#">
+                <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank">
                   <div class="about-ticket-title">
-                    Early
+                    Early Bird <br>
+                    Ticket
                   </div>
                 </a>
                 <div class="about-ticket-desc">
@@ -145,9 +152,9 @@
               </li>
               <li class="about-ticket-item">
 
-                <a href="#">
+                <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank">
                   <div class="about-ticket-title">
-                    Regular
+                    Regular <br>
                   </div>
                 </a>
                 <div class="about-ticket-desc">
@@ -156,14 +163,14 @@
               </li>
               <!--<li class="about-ticket-item">-->
 
-                <!--<a href="#">-->
-                  <!--<div class="about-ticket-title">-->
-                    <!--Late-->
-                  <!--</div>-->
-                <!--</a>-->
-                <!--<div class="about-ticket-desc">-->
-                <!--1650 UAH-->
-                <!--</div>-->
+              <!--<a href="#">-->
+              <!--<div class="about-ticket-title">-->
+              <!--Late-->
+              <!--</div>-->
+              <!--</a>-->
+              <!--<div class="about-ticket-desc">-->
+              <!--1650 UAH-->
+              <!--</div>-->
               <!--</li>-->
             </ul>
           </div>
