--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -22,11 +22,11 @@
   </script>
 
 
-  <title>Python Conference</title>
+  <title>PyCon Conference</title>
 </head>
 <body itemscope itemtype="http://schema.org/Event">
 
-<meta itemprop="name" content="Python Conference">
+<meta itemprop="name" content="PyCon Conference">
 <meta itemprop="description" content="PyCon Odessa is the second Python-focused conference organized in Odessa">
 <meta itemprop="endDate" content="2018-09-30">
 <meta itemprop="url" content="http://pycon-odessa.org.ua">
@@ -39,7 +39,7 @@
       <div class="header-cont container">
         <div class="logo">
           <a href="#heading">
-            <img data-src="public/img/logo.png" alt="Python Conference">
+            <img data-src="public/img/logo.png" alt="PyCon Conference">
           </a>
         </div>
         <div class="flex a-i-center">
@@ -90,7 +90,7 @@
           <div class="heading-title-row flex j-c-space-between m-t-20 ">
 
             <div class="heading-logo m-t-30">
-              <img src="public/img/logo.png" alt="Python Conference" itemprop="image">
+              <img src="public/img/logo.png" alt="PyCon Conference" itemprop="image">
             </div>
 
             <div class="heading-sun m-l-30">
