--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -39,7 +39,7 @@
       <div class="header-cont container">
         <div class="logo">
           <a href="#heading">
-            <img data-src="public/img/logo.png" alt="PyCon Conference">
+            <img src="https://via.placeholder.com/1x1" data-src="public/img/logo.png" alt="PyCon Conference">
           </a>
         </div>
         <div class="flex a-i-center">
@@ -94,7 +94,7 @@
             </div>
 
             <div class="heading-sun m-l-30">
-              <img data-src="public/img/heading_sun.svg" alt="">
+              <img src="https://via.placeholder.com/1x1" data-src="public/img/heading_sun.svg" alt="">
             </div>
 
 
@@ -121,8 +121,8 @@
           </div>
         </div>
         <div class="user-select-none">
-          <img class="heading-bg-img" data-src="public/img/heading_bg.png" alt="lighthouse">
-          <img class="heading-bg-img-m" data-src="public/img/heading_bg_m.png" alt="lighthouse">
+          <img class="heading-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/heading_bg.png" alt="lighthouse">
+          <img class="heading-bg-img-m" src="https://via.placeholder.com/1x1" data-src="public/img/heading_bg_m.png" alt="lighthouse">
         </div>
       </section>
 
@@ -190,7 +190,7 @@
           </div>
         </div>
         <div class="user-select-none">
-          <img class="about-bg-img" data-src="public/img/about_bg.png" alt="gates">
+          <img class="about-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/about_bg.png" alt="gates">
         </div>
       </section>
 
@@ -204,17 +204,17 @@
             </div>
 
             <div class="flex-item-1">
-              <img class="" data-src="public/img/sun_bg.png" alt="sun" style="max-width: 240px">
+              <img class="" src="https://via.placeholder.com/1x1" data-src="public/img/sun_bg.png" alt="sun" style="max-width: 240px">
             </div>
           </div>
 
           <div class="flex flex-wrap history-gallery">
             <div>
-              <img class="" data-src="public/img/history/history_1.jpg" alt="report">
+              <img class="" src="https://via.placeholder.com/1x1" data-src="public/img/history/history_1.jpg" alt="report">
             </div>
 
             <div>
-              <img class="" data-src="public/img/history/history_2.jpg" alt="cake">
+              <img class="" src="https://via.placeholder.com/1x1" data-src="public/img/history/history_2.jpg" alt="cake">
             </div>
           </div>
         </div>
@@ -228,7 +228,7 @@
           </div>
         </div>
         <div class="flex user-select-none">
-          <img class="speakers-bg-img" data-src="public/img/speakers_bg.png" alt="opera">
+          <img class="speakers-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/speakers_bg.png" alt="opera">
         </div>
       </section>
 
@@ -254,7 +254,7 @@
           <!--</div>-->
         </div>
         <div class="user-select-none">
-          <img class="schedule-bg-img" data-src="public/img/schedule_bg.png" alt="anchor">
+          <img class="schedule-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/schedule_bg.png" alt="anchor">
         </div>
       </section>
 
@@ -404,7 +404,7 @@
           </div>
         </div>
         <div class="user-select-none m-b-20">
-          <img class="sponsors-bg-img" data-src="public/img/sponsors_bg.png" alt="seagull">
+          <img class="sponsors-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/sponsors_bg.png" alt="seagull">
         </div>
       </section>
     </div>
@@ -415,7 +415,7 @@
     <button data-remodal-action="close" class="remodal-close"></button>
     <div class="flex speakers-modal_heading">
       <div class="speakers-modal_img">
-        <img data-src="public/img/speakers/andrey_grachev.png" alt="">
+        <img src="https://via.placeholder.com/1x1" data-src="public/img/speakers/andrey_grachev.png" alt="">
       </div>
       <div class="speakers-modal_txt ">
         <div class="speaker-name">
