--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -39,7 +39,7 @@
       <div class="header-cont container">
         <div class="logo">
           <a href="#heading">
-            <img src="https://via.placeholder.com/1x1" data-src="public/img/logo.png" alt="PyCon Conference">
+            <img src="https://via.placeholder.com/1x1" data-src="public/img/logo_py.svg" alt="PyCon Conference">
           </a>
         </div>
         <div class="flex a-i-center">
@@ -90,7 +90,7 @@
           <div class="heading-title-row flex j-c-space-between m-t-20 ">
 
             <div class="heading-logo m-t-30">
-              <img src="public/img/logo.png" alt="PyCon Conference" itemprop="image">
+              <img src="public/img/logo_py.svg" alt="PyCon Conference" itemprop="image">
             </div>
 
             <div class="heading-sun m-l-30">
@@ -271,118 +271,118 @@
             <br>
           </div>
 
-          <div class="table-container m-t-10">
-            <table class="table">
-              <thead>
-              <tr>
-                <th></th>
-                <th>Bronze</th>
-                <th>Silver</th>
-                <th>Gold</th>
-                <th>General</th>
-              </tr>
+          <!--<div class="table-container m-t-10">-->
+            <!--<table class="table">-->
+              <!--<thead>-->
+              <!--<tr>-->
+                <!--<th></th>-->
+                <!--<th>Bronze</th>-->
+                <!--<th>Silver</th>-->
+                <!--<th>Gold</th>-->
+                <!--<th>General</th>-->
+              <!--</tr>-->
 
-              <tr>
-                <td>${{ index.sponsors_option_1 }}$</td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_2 }}$</td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_3 }}$</td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_4 }}$</td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_5 }}$</td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_6 }}$</td>
-                <td></td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_7 }}$</td>
-                <td></td>
-                <td>+</td>
-                <td>+</td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_8 }}$</td>
-                <td></td>
-                <td></td>
-                <td>+</td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_9 }}$</td>
-                <td></td>
-                <td></td>
-                <td>+</td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_10 }}$</td>
-                <td></td>
-                <td></td>
-                <td>+</td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_11 }}$</td>
-                <td></td>
-                <td></td>
-                <td>+</td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_12 }}$</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_13 }}$</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>+</td>
-              </tr>
-              <tr>
-                <td>${{ index.sponsors_option_14 }}$</td>
-                <td></td>
-                <td>5%</td>
-                <td>10%</td>
-                <td>15%</td>
-              </tr>
-              </thead>
-            </table>
-          </div>
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_1 }}$</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_2 }}$</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_3 }}$</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_4 }}$</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_5 }}$</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_6 }}$</td>-->
+                <!--<td></td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_7 }}$</td>-->
+                <!--<td></td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_8 }}$</td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_9 }}$</td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_10 }}$</td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_11 }}$</td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td>+</td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_12 }}$</td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_13 }}$</td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td></td>-->
+                <!--<td>+</td>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<td>${{ index.sponsors_option_14 }}$</td>-->
+                <!--<td></td>-->
+                <!--<td>5%</td>-->
+                <!--<td>10%</td>-->
+                <!--<td>15%</td>-->
+              <!--</tr>-->
+              <!--</thead>-->
+            <!--</table>-->
+          <!--</div>-->
 
           <div class="m-t-50 h4 text-center sponsors-text">
             <p>
@@ -403,11 +403,11 @@
               ${{ index.sponsors_julia }}$
             </p>
 
-            <!--<div class="text-center m-t-50">-->
-            <!--<a href="#" target="_blank" class="btn">-->
-            <!--${{ index.sponsors_program }}$-->
-            <!--</a>-->
-            <!--</div>-->
+            <div class="text-center m-t-50">
+              <a href="public/docs/sponsorship_proposal_-_odessa_py.pdf" target="_blank" class="btn">
+                ${{ index.sponsors_program }}$
+              </a>
+            </div>
           </div>
         </div>
         <div class="user-select-none m-b-20">
