social snippet metadata added

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="${{ index.meta_title }}$">
   <meta property="og:description"
         content="${{ index.meta_description }}$">
-  <meta property="og:image" content="http://pycon-odessa.org.ua/public/img/logo_green.svg">
+  <meta property="og:image" content="http://pycon-odessa.org.ua/public/img/logo_py_1.svg">
   <!--social snippet metadata-->
 
   <script>
@@ -50,7 +50,7 @@
       <div class="header-cont container">
         <div class="logo">
           <a href="#heading">
-            <img src="https://via.placeholder.com/1x1" data-src="public/img/logo_py.svg" alt="PyCon Conference">
+            <img src="https://via.placeholder.com/1x1" data-src="public/img/logo_py_1.svg" alt="PyCon Conference">
           </a>
         </div>
         <div class="flex a-i-center">
@@ -101,7 +101,7 @@
           <div class="heading-title-row flex j-c-space-between m-t-20 ">
 
             <div class="heading-logo m-t-30">
-              <img src="public/img/logo_py.svg" alt="PyCon Conference" itemprop="image">
+              <img src="public/img/logo_py_1.svg" alt="PyCon Conference" itemprop="image">
             </div>
 
             <div class="heading-sun m-l-30">
