--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="${{ index.meta_title }}$">
   <meta property="og:description"
         content="${{ index.meta_description }}$">
-  <meta property="og:image" content="http://pycon-odessa.org.ua/public/img/logo_py_1.svg">
+  <meta property="og:image" content="http://pycon-odessa.org.ua/public/img/logo.png">
   <!--social snippet metadata-->
 
   <script>
@@ -180,7 +180,7 @@
                       </div>
                     </a>
                     <div class="about-ticket-desc">
-                      1750 <span itemprop="priceCurrency" content="UAH">UAH</span>
+                      1500 <span itemprop="priceCurrency" content="UAH">UAH</span>
                     </div>
                   </li>
                   <!--<li class="about-ticket-item">-->
@@ -415,7 +415,7 @@
             </p>
 
             <div class="text-center m-t-50">
-              <a href="public/docs/sponsorship_proposal_-_odessa_py.pdf" target="_blank" class="btn">
+              <a href="public/docs/sponsorship_proposal_-_odessa_py.pdf?v1.01" target="_blank" class="btn">
                 ${{ index.sponsors_program }}$
               </a>
             </div>
