--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -39,8 +39,8 @@
 </head>
 <body itemscope itemtype="http://schema.org/Event">
 
-<meta itemprop="name" content="PyCon Conference">
-<meta itemprop="description" content="PyCon Odessa is the second Python-focused conference organized in Odessa">
+<meta itemprop="name" content="${{ index.meta_title }}$">
+<meta itemprop="description" content="${{ index.meta_description }}$">
 <meta itemprop="endDate" content="2018-09-30">
 <meta itemprop="url" content="http://pycon-odessa.org.ua">
 <!--<meta itemprop="location" content="Odessa">-->
@@ -52,7 +52,8 @@
       <div class="header-cont container">
         <div class="logo">
           <a href="#heading">
-            <img src="https://via.placeholder.com/1x1" data-src="public/img/logo_py_1.svg" alt="PyCon Conference">
+            <img src="https://via.placeholder.com/1x1" data-src="public/img/logo.png?v1.01" alt="OdessaPy Conference">
+            <!--<img src="https://via.placeholder.com/1x1" data-src="public/img/logo_py_1.svg" alt="OdessaPy Conference">-->
           </a>
         </div>
         <div class="flex a-i-center">
@@ -103,7 +104,8 @@
           <div class="heading-title-row flex j-c-space-between m-t-20 ">
 
             <div class="heading-logo m-t-30">
-              <img src="public/img/logo_py_1.svg" alt="PyCon Conference" itemprop="image">
+              <img src="public/img/logo.png?v1.01" alt="OdessaPy Conference" itemprop="image">
+              <!--<img src="public/img/logo_py_1.svg" alt="OdessaPy Conference" itemprop="image">-->
             </div>
 
             <div class="heading-sun m-l-30">
