--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -36,6 +36,15 @@
 
 
   <title>${{ index.meta_title }}$</title>
+
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-N7X8M58');</script>
+  <!-- End Google Tag Manager -->
 </head>
 <body itemscope itemtype="http://schema.org/Event">
 
@@ -47,7 +56,6 @@
 <!--<meta itemprop="performer" content="">-->
 
 <div class="remodal-bg">
-  <div class="remodal-bg">
     <header id="header" class="header">
       <div class="header-cont container">
         <div class="logo">
@@ -464,6 +472,14 @@
       </button>
     </div>
   </div>
+
+  <script src="public/js/index.js"></script>
+
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N7X8M58"
+                    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 </body>
-<script src="public/js/index.js"></script>
 </html>
+
